[project]
name = "interwined"
version = "0.1.0"
description = ""
authors = [
    {name = "voidpointercast",email = "voidpointercast@justmail.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
